*******
pl 34
	- better midi syntax.
	- --midi,-M option.
	- preliminary midi2mudela (/mudela2midi) converter: m2m (JCN)
Internal
	- m2m sources: midi-*; (JCN)
	- new Midi_walker, fixes several MIDI bugs.
	- junked Midi_staff, Staff_column children, Midi_walker
	- Midi_output

*******
pl33
Examples
	- Swedish notenames (MB)

pl pre33-2

Bugfix
	- midi pitch
	
Features
	- Jan's patches, see below
Bugfix
	- some midi bugfixes.

pl pre33-1 (JCN)


	- midi output using pitches iso notename
Examples
	- added midi output (some midi output files broken?)
	- all melodic fixed (except for error.ly:-) 
	- midi.ly
Bugfix
	- midiwalker line break
	- empty/nonexistent include at top of ly
	- midi #tracks
	- midi pitch c0
	- midi poor man-s staff dynamics
Internal
	- Midi_column, Midi_staff, Midi_walker

pl pre33 (JCN)
	- Jan's patches, see below

Features
	- simple plet notation (JCN)
	- lyrics centred, but no fully suppored? (JCN)
Internal
	- Midi_stream 
	- Mididef
	- Midi_item, Midi_pitch, Midi_duration
	- Midi_chunk, Midi_header, Midi_track
	- preparations for midi output 
	- no exit upon context error (JCN)
	- converted some "warnings" to errors; no output (JCN)
Bugfix:
	- simple plet bugfix
Examples
	- updated standchen, menuetto (JCN)
	- new plet notation (JCN)
	- plet.ly (parse and spacing tests) (JCN)

*******
pl 32
Features
	- multiple meters, see rhythm.ly
	- skip syntax/Skip_req
	- score_wide_music: commands in staff now override commands in score.
Internal:
	- command carnage
	- Key_register
	- Bar_register
	- Meter_register
	- meters now kept in baseclass Staff_walker
	- Score_walker (to ease MIDI output)
Doc:
	- Hungarian doco added to CodingStyle

pl 32-1
	- music processing speedup
	- website added to doco
	- clef must *inside* music
	- fixed spurious "beam too narrow" messages.
Internal:
	- merge musical / non-musical staff_column
	- musical/ non-musical requests
	- Clef_register
	- split up request.hh, Musical_req vs. Nonmusical_req
*******
pl 31

Examples